rolled back to passing tests

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:postgresql://${MY_DATABASE_SERVICE_HOST}:${MY_DATABASE_SERVICE_PORT}/my_data
 #spring.datasource.username=${DB_USERNAME}
 #spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:postgresql://localhost:5432/my_data
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=user
 spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
