--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.2.jre7</version>
     </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>5.1.1</version>
+    </dependency>
 
     <!-- Testing -->
     <dependency>
