--- a/src/main/fabric8/credentials-secret.yml
+++ b/src/main/fabric8/credentials-secret.yml
@@ -3,5 +3,5 @@ kind: "Secret"
 metadata:
   name: "my-database-secret"
 stringData:
-  user: "luke"
-  password: "secret"
+  user: "user"
+  password: "pass"
