Reworked to allow testing using in-memory hsqldb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-#spring.datasource.url=jdbc:postgresql://${MY_DATABASE_SERVICE_HOST}:${MY_DATABASE_SERVICE_PORT}/my_data
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-spring.datasource.url=jdbc:postgresql://localhost:5432/insultdb
-spring.datasource.username=user
-spring.datasource.password=pass
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=insults
+spring.datasource.url=jdbc:hsqldb:mem:insultdb;sql.syntax_pgs=true
+spring.datasource.username=SA
+spring.datasource.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
+spring.jpa.properties.hibernate.default_schema=public
