--- a/pom.xml
+++ b/pom.xml
@@ -82,8 +82,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.1</version>
       <scope>test</scope>
     </dependency>
    
@@ -128,8 +129,9 @@
       </activation>
       <dependencies>
         <dependency>
-          <groupId>com.h2database</groupId>
-          <artifactId>h2</artifactId>
+          <groupId>org.hsqldb</groupId>
+          <artifactId>hsqldb</artifactId>
+          <version>2.4.1</version>
           <scope>runtime</scope>
         </dependency>
       </dependencies>
