--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:postgresql://${MY_DATABASE_SERVICE_HOST}:${MY_DATABASE_SERVICE_PORT}/insultdb
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/insultdb
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-#spring.datasource.url=jdbc:postgresql://localhost:5432/my_data
-#spring.datasource.username=user
-#spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=insults
+spring.jpa.properties.hibernate.default_schema=public
