--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
   </dependencies>
 
   <build>
+    <finalName>adjective-service</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
