--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
   <properties>
     <postgresql.version>9.4.1212</postgresql.version>
+    <start-class>io.openshift.booster.BoosterApplication</start-class>
   </properties>
   
   <dependencies>
@@ -99,6 +100,11 @@
   <build>
     <finalName>adjective-service</finalName>
     <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.0.3.RELEASE</version>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
