Fixed up Spring profiles to work correctly

--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -17,9 +17,5 @@ spec:
                  secretKeyRef:
                    name: my-database-secret
                    key: password
-            - name: MY_DATABASE_SERVICE_HOST
+            - name: DB_HOST
               value: postgresql-96-rhel7
-            - name: MY_DATABASE_SERVICE_PORT
-              value: 5432
-            - name: JAVA_OPTIONS
-              value: "-Dspring.profiles.active=openshift"
